# Team-32--Geo-alpha-Event-driven-stock-market-prevention-reasoning

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  master_seeder.py  pyproject.toml  requirements-api.txt  requirements-frontend.txt  requirements.txt  seed_dashboard.py  setup.py  test_gemini.py  test_llm_client.py  test_xai.py
.streamlit/: config.toml
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/v1/: router.py
app/core/: __init__.py  dependencies.py  events.py  exceptions.py  middleware.py  security.py
app/db/: __init__.py  session.py
app/db/migrations/: env.py  (+1 more)
app/models/: __init__.py  agent_state.py  base.py  geopol_event.py  market_data.py  rag_entry.py  report.py  sentiment.py  simulation.py
app/services/: __init__.py  base.py
app/utils/: __init__.py  date_utils.py  llm_client.py  metrics.py  rate_limiter.py  retry.py  serializers.py  singleton.py  validators.py
app/workers/: celery_app.py  scheduler.py
docs/: api.md  architecture.md
frontend/: __init__.py  app.py  config.py
frontend/components/: alerts.py  charts.py  metrics.py  timeline.py
frontend/pages/: agent_console.py  dashboard.py  prediction.py  rag_explorer.py  report_generator.py  simulation.py
frontend/utils/: __init__.py  api_client.py  helpers.py
scripts/: build_historical_dataset.py  init_db.sh  render_start.sh  seed_data.py  start.sh  start_hf.sh  startup.sh  update_historical_dataset.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_orchestrator.py  test_workflow_integration.py
tests/test_api/: test_endpoints.py
tests/test_services/: test_chroma.py  test_gdelt.py  test_reddit.py  test_tiingo.py
(+114 files in other folders)
