[project]
name = "geomarketgpt"
version = "0.1.0"
description = "Generative Geopolitical Financial Intelligence System"
readme = "README.md"
authors = [
    { name = "GeoMarketGPT Team" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "openai>=1.6.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.20",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",
    "celery>=5.3.6",
    "praw>=7.7.1",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.2",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.0",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
